[package]
name = "dkg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blstrs = "0.7.1"
proptest = "1.4.0"
criterion = "0.5.1"
libcrux = "0.0.2-pre.2"
serde = "1.0.203"
hacl = {git="https://github.com/jtcoolen/hacl-packages", rev="9d54a40edbbec7b2ee370ca7961c8f95c23f65a5"}
hacl-sys = {git="https://github.com/jtcoolen/hacl-packages", rev="9d54a40edbbec7b2ee370ca7961c8f95c23f65a5"}
getrandom = { version = "0.2.15", features = ["js"] }
rand_core = "0.9.0-alpha.1"
bicycl = {git="https://github.com/hsaleemsupra/cgdkg_artifact.git"}
bytemuck = "1.16.0"

[dev-dependencies]
proptest-derive = "0.2.0"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3