# SPDX-FileCopyrightText: 2024 Nomadic Labs <contact@nomadic-labs.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "distributed_key_generation"
publish = false
license.workspace = true
authors.workspace = true
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
blstrs.workspace = true
blst = "0.3.10"
#proptest = "1.4.0"
#criterion = "0.5.1"
serde = { version = "1.0.164", default-features = false }
getrandom = { version = "0.2.0", features = ["custom"], optional = true }
rand_core = {version="0.6.4", features = ["getrandom"], optional = true}
rand.workspace = true
rand.optional = true
rug = { version = "1.24.1", features = ["serde", "integer"], optional = true}
blake3 = "1.5.1"
group = "0.13.0"
ff = "0.13.0"
bincode = "1.3.2"
bytemuck = "1.16.0"
crypto-bigint = {version = "0.6.0-rc.0", default-features = false}
criterion.workspace = true
iai-callgrind = "0.14.0"
clippy = "0.0.302"

[dev-dependencies]
proptest-derive = "0.2.0"
#bicycl = {git="https://github.com/hsaleemsupra/cgdkg_artifact.git"}
threshold-encryption.workspace = true

[profile.release]
opt-level = 3               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.
lto = true

[profile.wasm32-unknown-unknown]
opt-level = 3               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.
lto = true

[profile.test.package.proptest]
opt-level = 3

[target.wasm32-unknown-unknown]
linker = "emcc"
ar = "emar"

[profile.test]
inherits = "release"


[features]
default = ["gmp", "random"]
gmp = ["rug"]
random = ["getrandom", "rand", "rand_core"]

[[bench]]
name = "benchmark"
harness = false
